# cpp-projects

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  ALL.clang-tidy  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  README.md  STYLE.md  build.ninja  cmake_install.cmake  dump-config  warnings.std
.github/workflows/: branch_init.yml  ci.yml  format-fix.yml  tagger.yml
cmake/: AggregateClangTidyResults.cmake  CompilerValidation.cmake  DiscoverTests-Internal.cmake  DiscoverTests.cmake  FetchUT.cmake  RunClangTidy.cmake  ToolingInfrastructure.cmake  ToolingSources.cmake  ToolingTargets.cmake
docs/clang-doc_html/: index.html  index_json.js
docs/clang-doc_html/GlobalNamespace/: index.html
docs/clang-doc_html/net/: index.html
docs/clang-doc_html/net/asio_concepts/: index.html
docs/clang-doc_html/net/asio_concepts/socket_transmission/: index.html
docs/clang-doc_html/net/asio_concepts/waitables/: index.html
docs/clang-doc_html/net/telnet/: default_protocol_fsm_config.html  option.html  option_handler_registry.html  option_registry.html  option_status_db.html  protocol_fsm.html  telnet_processing_signal_category.html
docs/clang-doc_html/net/telnet/awaitables/: index.html
docs/clang-doc_html/net/telnet/concepts/: index.html  protocol_fsm.html
docs/clang-doc_html/net/telnet/stream/: context_type.html  input_processor.html
docs/clang-doc_html/std/__1/: formatter.html  is_error_code_enum.html
docs/clang-doc_html/std/chrono/: index.html
docs/clang-doc_html/std/filesystem/: index.html
docs/clang-doc_html/std/literals/complex_literals/: index.html
docs/clang-doc_html/std/literals/string_literals/: index.html
docs/clang-doc_html/std/literals/string_view_literals/: index.html
docs/clang-doc_html/std/numbers/: index.html
docs/clang-doc_html/std/placeholders/: index.html
docs/clang-doc_html/std/pmr/: index.html
docs/clang-doc_html/std/ranges/views/: index.html
docs/clang-doc_html/std/regex_constants/: index.html
docs/clang-doc_html/std/rel_ops/: index.html
docs/clang-doc_html_doxygen/: index_json.js
docs/clang-doc_html_doxygen/net/: index.html
docs/clang-doc_html_doxygen/net/asio_concepts/: index.html
docs/clang-doc_html_doxygen/net/asio_concepts/buffers/: index.html
docs/clang-doc_html_doxygen/net/asio_concepts/socket_connection/: index.html
docs/clang-doc_html_doxygen/net/asio_concepts/socket_options/: index.html
docs/clang-doc_html_doxygen/net/asio_concepts/streams/: index.html
docs/clang-doc_html_doxygen/net/asio_concepts/tokens/: index.html
docs/clang-doc_html_doxygen/net/telnet/: index.html  option_status_record.html  stream.html  telnet_error_category.html
docs/clang-doc_html_doxygen/net/telnet/awaitables/: index.html  tagged_awaitable.html
docs/clang-doc_html_doxygen/net/telnet/concepts/: index.html  protocol_fsm.html
docs/clang-doc_html_doxygen/net/telnet/option_handler_registry/: option_handler_record.html
docs/clang-doc_html_doxygen/net/telnet/stream/: input_processor.html
docs/clang-doc_html_doxygen/std/: index.html
docs/clang-doc_html_doxygen/std/__cpo/: index.html
docs/clang-doc_html_doxygen/std/literals/: index.html
docs/clang-doc_html_doxygen/std/literals/chrono_literals/: index.html
docs/clang-doc_html_doxygen/std/ranges/: index.html
docs/clang-doc_html_doxygen/std/ranges/__cpo/: index.html
docs/clang-doc_html_doxygen/std/this_thread/: index.html
docs/clang-doc_md/net/: index.md
docs/clang-doc_md/net/asio_concepts/: index.md
docs/clang-doc_md/net/telnet/: index.md  option_registry.md  option_status_db.md  option_status_record.md  protocol_fsm.md  stream.md  telnet_processing_signal_category.md
docs/clang-doc_md/net/telnet/awaitables/: index.md
docs/clang-doc_md/std/__1/: formatter.md  is_error_code_enum.md
docs/clang-doc_md/std/filesystem/: index.md
docs/clang-doc_md/std/literals/: index.md
docs/clang-doc_md/std/numbers/: index.md
docs/clang-doc_md/std/placeholders/: index.md
docs/clang-doc_md/std/pmr/: index.md
docs/clang-doc_md/std/ranges/: index.md
docs/clang-doc_md/std/regex_constants/: index.md
docs/clang-doc_md/std/rel_ops/: index.md
docs/clang-doc_md_doxygen/: all_files.md  index.md
docs/clang-doc_md_doxygen/GlobalNamespace/: index.md
docs/clang-doc_md_doxygen/net/: index.md
docs/clang-doc_md_doxygen/net/asio_concepts/: index.md
docs/clang-doc_md_doxygen/net/telnet/: DefaultProtocolFSMConfig.md  OptionHandlerRegistry.md  OptionStatusDB.md  OptionStatusRecord.md  ProtocolFSM.md  default_protocol_fsm_config.md  option.md  option_handler_registry.md  protocol_fsm.md  telnet_error_category.md
docs/clang-doc_md_doxygen/std/: index.md
docs/clang-doc_md_doxygen/std/chrono/: index.md
docs/clang-doc_md_doxygen/std/this_thread/: index.md
net/: CMakeLists.txt  cmake_install.cmake
net/asio_concepts/: CMakeLists.txt  cmake_install.cmake
net/asio_concepts/src/: net.asio_concepts.cppm
net/asio_concepts/tests/: net.asio_concepts.test-grok.catch2.cpp  net.asio_concepts.test-grok.ut.cpp  net.asio_concepts.test.catch2.cpp  net.asio_concepts.test.ut.cpp
net/telnet/: CMakeLists.txt  Changelog.md  cmake_install.cmake  todo.md
net/telnet/src/: Changelog.md  net.telnet-awaitables.cppm  net.telnet-concepts.cppm  net.telnet-errors.cppm  net.telnet-internal.cppm  net.telnet-options-format_test.cppm  net.telnet-options.cppm  net.telnet-protocol_config.cppm  net.telnet-protocol_fsm.cppm  net.telnet-stream.cppm  net.telnet-types.cppm  net.telnet.cppm  telnet-awaitables.cppm  telnet-concepts.cppm  telnet-errors.cppm  telnet-internal.cppm  telnet-options.cppm  telnet-protocol_config.cppm  telnet-protocol_fsm-impl.cpp  telnet-protocol_fsm.cppm  telnet-socket-async-impl.cpp  telnet-socket-impl.cpp  telnet-socket-sync-impl.cpp  telnet-socket.cppm  telnet-stream.cppm  telnet-types.cppm  telnet.cppm  telnet_socket.cppm  todo.md
net/telnet/src/impl/: net.telnet-protocol_fsm-impl.cpp  net.telnet-stream-async-impl.cpp  net.telnet-stream-impl.cpp  net.telnet-stream-sync-impl.cpp  telnet-stream-async-impl.cpp  telnet-stream-impl.cpp  telnet-stream-sync-impl.cpp
(+40 files in other folders)
